<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:tools = "http://schemas.android.com/tools"
    android:layout_width = "fill_parent"
    android:layout_height = "fill_parent"
    android:gravity = "center"
    android:orientation = "vertical"

    >

    <TextView
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:text="@string/invalidLogin"
        android:id="@+id/invalidLogin"
        android:visibility="invisible"
        android:textColor="@color/design_default_color_error"/>
    <TextView
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:text="@string/Email" />
    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/emailEditText"/>

    <TextView
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:text="@string/password"/>
    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp"
        android:inputType="textPassword"
        android:id="@+id/passwordEditText"
        android:autofillHints=""/>


    <Button
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginVertical="10dp"
        android:text="@string/logInButton"
        android:id="@+id/logInButton"
        />

    <Button
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:text="@string/newUser"
        android:id="@+id/newUserButton"
        />



</LinearLayout>


