<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:tools = "http://schemas.android.com/tools"
    android:layout_width = "fill_parent"
    android:layout_height = "fill_parent"
    android:orientation = "vertical"
    android:weightSum="10">



    <LinearLayout
        android:layout_width= "match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="top"
        android:weightSum="10">

        <Button
            android:id="@+id/newGroupButton"
            android:layout_weight="3.8"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="@string/create_new_group"
            android:textSize="12sp"
            android:layout_marginStart="3dp"
            />

            <Button
            android:id="@+id/personalScheduleButton"
            android:layout_weight="3.8"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="@string/personal_schedule"
            android:textSize="12sp"
            android:layout_marginStart="3dp"
            />
        <Button
            android:id="@+id/logOutButton"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="@string/log_out"
            android:textSize="12sp"
            android:layout_marginStart="12dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width= "fill_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:orientation="vertical"
        android:gravity="start">

        <ListView
            android:id="@+id/groupList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>




</LinearLayout>